--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Spooky</title>
+  <title>CRAZEOH — TripShred</title>
+  <!-- icon /favicon.ico -->
+  <link rel="icon" href="/favicon.ico" />
+  
   <style>
     #splash {
       position: absolute;
