fix index relative URL

--- a/index.html
+++ b/index.html
@@ -131,6 +131,6 @@ const title = (PROJECT === 'loh') ? 'Lord of Hosts — TripShred' : (PROJECT ===
       </svg>
   </div>
   <%}%>
-  <script type="module" src="/src/main.tsx"></script>
+  <script type="module" src="./src/main.tsx"></script>
 </body>
 </html>
