--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@ const title = (PROJECT === 'loh') ? 'Lord of Hosts — TripShred' : (PROJECT ===
       width: 100%;
       height: 100%;
       display: flex;
+      display: none;
       justify-content: center;
       align-items: center;
       background-color: black;
